# celegansOF

./: .gitignore  CMakeLists.txt  README.md  addons.make  celegansOF.sln  celegansOF.vcxproj  celegansOF.vcxproj.filters  previewSave.h
addons/ofxImGui/src/: BaseEngine.cpp  BaseEngine.h  Gui.cpp  Gui.h
celegansOF.xcodeproj/: project.pbxproj
celegansOF.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
celegansOF.xcodeproj/xcshareddata/xcschemes/: celegansOF Debug.xcscheme  celegansOF Release.xcscheme
celegansOF.xcodeproj/xcuserdata/user.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
celegansOF.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
imagej/scripts/: beamFit.py  shaferBinary.py
src/: app_state.h  beam_parameters.cpp  beam_parameters.h  beam_skeleton.cpp  beam_skeleton.h  beam_tweaker.cpp  beam_tweaker.h  constants.h  experiment_metadata.cpp  experiment_metadata.h  file_load.cpp  file_load.h  git_utils.h  imgui_utils.cpp  imgui_utils.h  main.cpp  ofApp.cpp  ofApp.h  point_selector.cpp  point_selector.h  serializable.cpp  serializable.h  serializable_library.cpp  serializable_library.h  squared_error.h  time_utils.h
src/beam_fitting/: beam_skeleton.cpp  beam_skeleton.h  squared_error.cpp
src/tests/: run_tests.cpp  serializable_test.h
